# http-observatory-local-scan-snap

./: .gitignore  README.md  pyproject.toml  setup.py
httpobs/: __init__.py
httpobs/scanner/: utils.py
httpobs/scanner/analyzer/: content.py  misc.py
httpobs/scripts/: httpobs-local-scan  localscan.py
scripts/: merge_upstream
snap/: snapcraft.yaml
